config/nginx-route.yaml
apiVersion: v1
kind: Route
metadata:
  creationTimestamp: null
  labels:
    app: nginx
  name: nginx
  namespace: crm-prod
  resourceVersion: '22525322'
spec:
  host: nginx-crm-prod.prdocp.hthk.com.hk
  port:
    targetPort: 8080
  to:
    kind: Service
    name: nginx
    weight: 100
  wildcardPolicy: None
status: {}
